# pystock

./: .gitignore  README.md  pyproject.toml
pystock_client/: config.py  tsetmc_settings.py
pystock_client/data/: stocks_list.json
pystock_client/scraper/: stocks_scraper.py
pystock_client/scripts/: update_stocks_json.py
pystock_client/utils/: __init__.py  async_request.py  custom_data_class.py  custom_logger.py  table_scraper.py
