[tool.poetry]
name = "pystock-client"
version = "0.1.0"
description = "iranian stock detail client in python"
authors = ["Majid Shajari <majidpy89@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
pandas = "*"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"
persiantools = "^3.0.1"
pytz = "^2023.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

